RESOLVED FIXED100869
[BlackBerry] Crash on html popup form control when element is deleted
https://bugs.webkit.org/show_bug.cgi?id=100869
Summary [BlackBerry] Crash on html popup form control when element is deleted
George Staikos
Reported 2012-10-31 11:09:00 PDT
If a HTML form control is deleted while its HTML popup is open, the popup will reference the element on close a crash. Add a guard. Testcase will be attached but I haven't found a way to automate this for layout tests yet.
Attachments
Test case (426 bytes, text/html)
2012-10-31 11:09 PDT, George Staikos
no flags
Patch (2.52 KB, patch)
2012-10-31 11:11 PDT, George Staikos
no flags
George Staikos
Comment 1 2012-10-31 11:09:53 PDT
Created attachment 171687 [details] Test case
George Staikos
Comment 2 2012-10-31 11:11:41 PDT
WebKit Review Bot
Comment 3 2012-10-31 17:59:34 PDT
Comment on attachment 171688 [details] Patch Clearing flags on attachment: 171688 Committed r133102: <http://trac.webkit.org/changeset/133102>
WebKit Review Bot
Comment 4 2012-10-31 17:59:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.