[BlackBerry] Crash on html popup form control when element is deleted https://bugs.webkit.org/show_bug.cgi?id=100869

Reviewed by Yong Li.

Make the element pointers RefPtr so they don't go away before the popup
is closed.

* WebCoreSupport/ColorPickerClient.h:
(ColorPickerClient):
* WebCoreSupport/DatePickerClient.h:
(DatePickerClient):
* WebCoreSupport/SelectPopupClient.h:
(SelectPopupClient):


Canonical link: https://commits.webkit.org/118970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133102 268f45cc-cd09-0410-ab3c-d52691b4dbfc