Source/WebKit/blackberry/WebCoreSupport/DatePickerClient.h
@@ -55,7 +55,7 @@ private:
     BlackBerry::Platform::BlackBerryInputType m_type;
     String m_source;
     BlackBerry::WebKit::WebPagePrivate* m_webPage;
-    HTMLInputElement* m_element;
+    RefPtr<HTMLInputElement> m_element;
 };
 } // namespace WebCore
 #endif
